# pyneng-quiz

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/pyneng_quiz/: __init__.py  config.json  pyneng.py  qa_dict.py  question_table_widget.py  questions.json  questions_en.json  questions_ru.json  questions_uk.json  select_questions_widget.py  termquiz.py
