[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pyneng-quiz"
version = "0.1.0"
description = "CLI tool to run quiz in pyneng book/course"
readme = "README.md"
authors = [{ name = "Natasha Samoylenko", email = "natasha.samoylenko@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["cli", "tutorial"]
dependencies = [
	"textual == 0.1.18",
    "rich"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/natenka/pyneng-quiz"

[project.scripts]
pynengq = "pyneng_quiz.termquiz:main"

[project.entry-points]
